--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -1,46 +1,29 @@
-name: Infra
+name: Terraform Refresh
 
 on:
-  pull_request:
-    branches:
-      - main
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-
-permissions:
-  contents: write
-  pull-requests: write
-  id-token: write
-
-env:
-  AWS_REGION: us-east-1
-
+  workflow_dispatch:  # Allows manual triggering from GitHub UI
 
 jobs:
-  terraform-refresh:
-    runs-on: ubuntu-latest
+  terraform-refresh:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.10.0
-
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::784733659029:role/oidc-role
           aws-region:  us-east-1
 
-     
-      - name: Terraform Init
-        run: terraform init
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.6.0  # Adjust version as needed
 
-      - name: Terraform Refresh
-        run: terraform refresh
+      - name: Terraform Init
+        run: terraform init
 
+      - name: Terraform Refresh
+        run: terraform refresh
